# Study-APS3-DemoFastAPI

./: .gitignore  README.md  alembic.ini  database.sqlite  pyproject.toml
alembic/versions/: 2021-09-25_00:59:05_c922bc4d287e_create_accounts_table.py  2021-09-25_01:11:30_5233e4e0edd0_into_accounts_added_first_name_last_.py  2021-09-25_02:48:12_1b2b1b99ec84_create_accounts_table.py
src/demo/: __main__.py  app.py  config.py  database.py  models.py
