[tool.poetry]
name = "study-aps3-demofastapi"
version = "0.1.0"
description = ""
authors = ["Tim <jasper7466@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
